--- a/proyecto/src/application/Facturacion.fxml
+++ b/proyecto/src/application/Facturacion.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="774.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="774.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.FacturacionController">
    <children>
       <MenuButton fx:id="tipoPagoMenu" layoutX="27.0" layoutY="236.0" mnemonicParsing="false" style="-fx-background-color: #FFFFFF; -fx-border-color: #62ccd0;" text="seleccionar forma de pago" textFill="#62ccd0" AnchorPane.leftAnchor="27.0">
         <items>
