--- a/proyecto/src/application/Facturacion.fxml
+++ b/proyecto/src/application/Facturacion.fxml
@@ -29,7 +29,7 @@
          <font>
             <Font name="Arial Black" size="12.0" />
          </font></Label>
-      <TextField fx:id="cedulaClienteText" layoutX="26.0" layoutY="106.0" prefHeight="25.0" prefWidth="110.0" promptText="Cedula Cliente" style="-fx-background-color: EEFFFC; -fx-border-color: D7D7D7;" AnchorPane.leftAnchor="26.0" />
+      <TextField fx:id="cedulaClienteText" layoutX="26.0" layoutY="106.0" onKeyPressed="#VerificacionCedulaPress" prefHeight="25.0" prefWidth="110.0" promptText="Cedula Cliente" style="-fx-background-color: EEFFFC; -fx-border-color: D7D7D7;" AnchorPane.leftAnchor="26.0" />
       <TextField fx:id="referenciaText" layoutX="26.0" layoutY="175.0" prefHeight="25.0" prefWidth="110.0" promptText="Ref. Producto" style="-fx-background-color: EEFFFC; -fx-border-color: D7D7D7;" AnchorPane.leftAnchor="26.0" />
       <Label layoutX="314.0" layoutY="14.0" text="FACTURACION" AnchorPane.leftAnchor="314.0" AnchorPane.rightAnchor="313.0">
          <font>
@@ -104,7 +104,7 @@
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="actualizarBtn" mnemonicParsing="false" onMouseClicked="#actualizarBtn" style="-fx-background-color: #FF9E00;" text="ACTUALIZAR" textFill="WHITE" GridPane.columnIndex="3">
+            <Button fx:id="agregarBtn" mnemonicParsing="false" onMouseClicked="#agregarBtn" style="-fx-background-color: #FF9E00;" text="AGREGAR" textFill="WHITE" GridPane.columnIndex="3">
                <font>
                   <Font name="Arial Black" size="12.0" />
                </font>
