--- a/proyecto/src/application/Facturacion.fxml
+++ b/proyecto/src/application/Facturacion.fxml
@@ -31,17 +31,18 @@
          </font></Label>
       <TextField fx:id="cedulaClienteText" layoutX="26.0" layoutY="106.0" onKeyPressed="#buscarClientePorCedula" prefHeight="25.0" prefWidth="110.0" promptText="Cedula Cliente" style="-fx-background-color: EEFFFC; -fx-border-color: D7D7D7;" AnchorPane.leftAnchor="26.0" />
       <TextField fx:id="referenciaText" layoutX="26.0" layoutY="175.0" prefHeight="25.0" prefWidth="110.0" promptText="Ref. Producto" style="-fx-background-color: EEFFFC; -fx-border-color: D7D7D7;" AnchorPane.leftAnchor="26.0" />
+      <TextField fx:id="cantidadText" layoutX="166.0" layoutY="176.0" prefHeight="25.0" prefWidth="119.0" promptText="cantidad" AnchorPane.leftAnchor="160.0" />
       <Label layoutX="314.0" layoutY="14.0" text="FACTURACION" AnchorPane.leftAnchor="314.0" AnchorPane.rightAnchor="313.0">
          <font>
             <Font name="Arial Black" size="18.0" />
          </font>
       </Label>
       <TextField fx:id="numeroFcaturaText" layoutX="599.0" layoutY="50.0" style="-fx-background-color: EEFFFC; -fx-border-color: D7D7D7;" AnchorPane.rightAnchor="24.0" />
-      <Label layoutX="504.0" layoutY="54.0" text="N° FACTURA" AnchorPane.rightAnchor="187.0">
+      <Label layoutX="130.0" layoutY="80.0" text="CLIENTE">
          <font>
             <Font name="Arial Black" size="12.0" />
          </font></Label>
-      <Label layoutX="130.0" layoutY="80.0" text="CLIENTE">
+      <Label layoutX="504.0" layoutY="54.0" text="N° FACTURA" AnchorPane.rightAnchor="187.0">
          <font>
             <Font name="Arial Black" size="12.0" />
          </font></Label>
@@ -58,7 +59,6 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <TextField fx:id="cantidadText" layoutX="166.0" layoutY="176.0" prefHeight="25.0" prefWidth="119.0" promptText="cantidad" AnchorPane.leftAnchor="160.0" />
       <ImageView fx:id="btnCerrar" fitHeight="25.0" fitWidth="23.0" layoutX="26.0" layoutY="16.0" onMouseClicked="#btnCerrar" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../imagenes/atras.png" />
@@ -75,7 +75,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Button fx:id="buscarBtn" mnemonicParsing="false" onMouseClicked="#buscarBtn" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #62ccd0;" text="BUSCAR" textFill="WHITE">
+            <Button fx:id="buscarBtn" mnemonicParsing="false" onMouseClicked="#buscarFactura" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #62ccd0;" text="BUSCAR" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="12.0" />
                </font>
