--- a/proyecto/src/application/Login.fxml
+++ b/proyecto/src/application/Login.fxml
@@ -11,7 +11,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" style="-fx-background-color: #4B4B4B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginController">
    <children>
       <TextField fx:id="userText" layoutX="76.0" layoutY="125.0" promptText="user" style="-fx-background-color: transparent; -fx-border-color: #ffffff; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: #ffffff;" />
-      <PasswordField fx:id="passText" layoutX="76.0" layoutY="181.0" promptText="password" style="-fx-background-color: transparent; -fx-border-color: #ffffff; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: #ffffff;" />
+      <PasswordField fx:id="passText" layoutX="76.0" layoutY="181.0" onKeyPressed="#InLogin" promptText="password" style="-fx-background-color: transparent; -fx-border-color: #ffffff; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: #ffffff;" />
       <Button fx:id="btnLogin" layoutX="124.0" layoutY="236.0" mnemonicParsing="false" onMouseClicked="#btnLogin" style="-fx-background-color: #ffffff;" text="LOGIN">
          <font>
             <Font name="Arial Black" size="12.0" />
